1. Updated the properties files accordingly. 2. More cache added and other improvements. 3. Added EventNotification services classes. 4. More improvements